[package]
name = "sgl"
version = "0.1.0"
authors = ["Ketan Reynolds <ketan.cs.reynolds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { git = "https://github.com/8bitkitkat/rust-gl.git" }

enumflags2 = "0.7"
shrinkwraprs = "0.3"

